# acsl_sl_bridge

./: dune-project  frama-c-sl.opam  install_sl.sh  readme.md  run_sl.sh  sl_to_acsl.bat  sl_to_acsl.sh
demo/: demo.c
docs/: SL_to_ACSL_Manual.md
frama_sl/: dune  sl_attach.ml  sl_options.ml  sl_register.ml
frama_sl/gui/: dune  sl_register_gui.ml
src/: acsl_lexer.mll  acsl_parser.mly  acsl_sl_orchestrator.ml  ast.ml  core.ml  core_to_acsl.ml  dune  main.ml  sl_lexer.mll  sl_parser.mly  sl_to_core.ml  translate.ml
src/ast/: acsl_ast.ml  core.ml  dune  sl_ast.ml
src/ast_printer/: acsl_ast_printer.ml  core_printer.ml  dune  sl_ast_printer.ml
src/builder/: core_builder.ml  dune
src/frontend/: dune  sl_extract.ml
src/translator/: acsl_to_core.ml  core_to_acsl.ml  core_to_sl.ml  dune  sl_desugar.ml  sl_to_core.ml  translate.ml
src/translator/core_to_ac_sl/: core_to_acsl.ml  dune  helper_core_to_acsl.ml  make_contract_of_spec.ml  make_loop_contract.ml
src/translator/sl_to_core/: dune  helper.ml  make_case_core.ml  make_loop_core.ml  make_result_core.ml  make_simple_core.ml  make_sugar_core.ml  spec_to_core.ml
test/: abs_diff_acsl.c  dune  element_search.c  element_search_acsl.c  max_abs.c  max_abs_acsl.c  read_only_array_acsl.c  search_and_replace_acsl.c  search_and_replace_acsl_corrected.c  test.c  test_acsl.c  test_acsl_ast.ml  test_ast.ml  test_core.ml  test_core_to_acsl.ml  test_lexer.ml  test_parser.ml  test_sl_ast.ml  test_sl_to_core.ml  test_translate.ml  test_translate_sl_to_acsl.ml  translate_for_loop.c  zero_array_acsl.c
test/ast/: dune  test_acsl_ast.ml  test_sl_ast.ml
test/parse/: dune  test_lexer.ml  test_parser.ml
test/system_test/abs_diff/: abs_diff.c  abs_diff_acsl.c
test/system_test/additional_tests/known_gaps/global_counter/: global_counter.c  global_counter_acsl.c
test/system_test/additional_tests/pure/max2/: max2.c  max2_acsl.c
test/system_test/additional_tests/pure/safe_div/: safe_div.c  safe_div_acsl.c
test/system_test/additional_tests/pure/sign/: sign.c  sign_acsl.c
test/system_test/additional_tests/single_cell_heap/inc/: inc.c  inc_acsl.c
test/system_test/additional_tests/single_cell_heap/rotate3/: rotate3.c  rotate3_acsl.c
test/system_test/for/: for.c  for_acsl.c
test/system_test/incr_max/: incr_max_spatial.c  incr_max_spatial_acsl.c
test/system_test/mutable_arrays/: mutable_arrays_alt.c  mutable_arrays_prime.c  mutable_arrays_prime_acsl.c
test/system_test/read_only_arrays/: read_only_arrays_alt.c  read_only_arrays_alt_acsl.c  read_only_arrays_prime.c  read_only_arrays_prime_acsl.c
test/system_test/search_and_replace/: search_and_replace1.c  search_and_replace_alt.c  search_and_replace_alt_acsl.c  search_and_replace_old.c  search_and_replace_old_at.c  search_and_replace_old_at_acsl.c  search_and_replace_prime.c  search_and_replace_prime_acsl.c
test/system_test/swap/: swap_case.c  swap_case_acsl.c  swap_norm.c  swap_norm_acsl.c  swap_old.c  swap_prime.c
test/system_test/zero_array/: zero_array.c  zero_array_acsl.c
test/translate/: dune  test_core_to_acsl.ml  test_sl_desugar.ml  test_sl_to_core.ml  test_translate_acsl_to_sl.ml  test_translate_sl_to_acsl.ml
