(library
 (name sl_to_acsl_lib)
 (modules sl_parser sl_lexer)
 ; (modules sl_parser sl_lexer sl_to_core core_to_acsl translate)
 (libraries ast)
 (wrapped false))

(menhir
 (modules sl_parser))

(ocamllex
 (modules sl_lexer))

(executable
 (name main)
 (modules main)
 (libraries sl_to_acsl_lib))
