(library
 (name sl_to_acsl_lib)
 (modules sl_parser sl_lexer)
 (libraries ast ast_printer translator)
 (wrapped false))

(menhir
 (modules sl_parser))

(ocamllex
 (modules sl_lexer))

(executable
 (name acsl_sl_orchestrator)
 (modules acsl_sl_orchestrator)
 (libraries sl_to_acsl_lib))
