(library
 (name acsl_sl_bridge_lib)
 (modules sl_parser sl_lexer acsl_parser acsl_lexer)
 (libraries ast ast_printer translator)
 (wrapped false))

(menhir
 (modules sl_parser))

(ocamllex
 (modules sl_lexer))

 (menhir
 (modules acsl_parser))

(ocamllex
 (modules acsl_lexer))

(executable
 (name main)
 (modules main)
 (libraries acsl_sl_bridge_lib))

