(test
 (name test_ast)
 (modules test_ast)
 (libraries sl_to_acsl_lib))

(test
 (name test_lexer)
 (modules test_lexer)
 (libraries sl_to_acsl_lib))

(test
 (name test_parser)
 (modules test_parser)
 (libraries sl_to_acsl_lib))

; (test
;  (name test_translate)
;  (modules test_translate)
;  (libraries sl_to_acsl_lib))

(test
 (name test_core)
 (modules test_core)
 (libraries sl_to_acsl_lib))

; (test
;  (name test_core_to_acsl)
;  (modules test_core_to_acsl)
;  (libraries sl_to_acsl_lib))

(test
 (name test_sl_to_core)
 (modules test_sl_to_core)
 (libraries sl_to_acsl_lib))
