(test
 (name test_sl_ast)
 (modules test_sl_ast)
 (libraries sl_to_acsl_lib ounit2))

(test
 (name test_core)
 (modules test_core)
 (libraries sl_to_acsl_lib ounit2))

(test
 (name test_core_to_acsl)
 (modules test_core_to_acsl)
 (libraries sl_to_acsl_lib ounit2))

(test
 (name test_lexer)
 (modules test_lexer)
 (libraries sl_to_acsl_lib))

(test
 (name test_parser)
 (modules test_parser)
 (libraries sl_to_acsl_lib))

(test
 (name test_translate)
 (modules test_translate)
 (libraries sl_to_acsl_lib))


(test
 (name test_sl_to_core)
 (modules test_sl_to_core)
 (libraries sl_to_acsl_lib))

(test
 (name test_acsl_ast)
 (modules test_acsl_ast)
 (libraries sl_to_acsl_lib))
