(test
 (name test_sl_ast)
 (modules test_sl_ast)
 (libraries acsl_sl_bridge_lib ounit2))

(test
 (name test_core)
 (modules test_core)
 (libraries acsl_sl_bridge_lib ounit2))

(test
 (name test_core_to_acsl)
 (modules test_core_to_acsl)
 (libraries acsl_sl_bridge_lib ounit2))

; (test
;  (name test_lexer)
;  (modules test_lexer)
;  (libraries acsl_sl_bridge_lib ounit2))

(test
 (name test_parser)
 (modules test_parser)
 (libraries acsl_sl_bridge_lib ounit2))

(test
 (name test_translate)
 (modules test_translate)
 (libraries acsl_sl_bridge_lib ounit2))

(test
 (name test_sl_to_core)
 (modules test_sl_to_core)
 (libraries acsl_sl_bridge_lib ounit2))

(test
 (name test_acsl_ast)
 (modules test_acsl_ast)
 (libraries acsl_sl_bridge_lib ounit2))
